# Convert_To_Webp

./: README.md  pyproject.toml
src/: gui.py  main.py  my_logger.py  settings.py
src/convert_to_webp/: __init__.py
